Change java sdk to java 8